# text

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp  screenshot.c  screenshot.h  shader.c  shader.h  shadow.cpp
res/: fs_texture.glsl  vs_texture.glsl
